<resources>
    <string name="app_name">courseWork</string>
    <string name="title_home">Home</string>
    <string name="title_topics">Topics</string>
    <string name="title_search">Search</string>
    <string name="title_account">Account</string>
    <string name="category">Category:</string>
    <string name="country">Country:</string>
    <string name="search_for_articles">Search for articles</string>
    <string-array name="Countries">
        <item>None</item>

        <item>United Arab Emirates - ae</item>
        <item>Argentina - ar</item>
        <item>Austria - at</item>
        <item>Australia - au</item>
        <item>Belgium - be</item>
        <item>Bulgaria - bg</item>
        <item>Canada - ca</item>
        <item>Switzerland - ch</item>
        <item>China - cn</item>
        <item>Colombia - co</item>
        <item>Cuba - cu</item>
        <item>Czech Republic - cz</item>
        <item>Germany - de</item>
        <item>Egypt - eg</item>

        <item>France - fr</item>
        <item>United Kingdom - gb</item>
        <item>Greece - gr</item>
        <item>Hong Kong - hk</item>
        <item>Hungary - hu</item>
        <item>Indonesia - id</item>
        <item>Ireland - ie</item>
        <item>Israel - il</item>
        <item>India - in</item>
        <item>Italy - it</item>
        <item>Japan - jp</item>
        <item>Korea (South) - kr</item>
        <item>Lithuania - lt</item>
        <item>Latvia - lv</item>
        <item>Morocco - ma</item>

        <item>Mexico - mx</item>
        <item>Malaysia - my</item>
        <item>Nigeria - ng</item>
        <item>Netherlands - nl</item>
        <item>Norway - no</item>
        <item>New Zealand - nz</item>
        <item>Philippines - ph</item>
        <item>Poland - pl</item>
        <item>Portugal - pt</item>
        <item>Romania - ro</item>
        <item>Serbia - rs</item>
        <item>Russia - ru</item>
        <item>Saudi Arabia - sa</item>
        <item>Sweden - se</item>
        <item>Singapore - sg</item>

        <item>Slovenia - si</item>
        <item>Slovakia - sk</item>
        <item>Thailand - th</item>
        <item>Turkey - tr</item>
        <item>Taiwan - tw</item>
        <item>Ukraine - ua</item>
        <item>United States of America - us</item>
        <item>Venezuela - ve</item>
        <item>South Africa - za</item>
    </string-array>
    <string-array name="Categories">
        <item>None</item>
        <item>business</item>
        <item>entertainment</item>
        <item>health</item>
        <item>science</item>
        <item>sports</item>
        <item>technology</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_login">Login</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account. Sign up</string>
    <string name="sign_up">sign up</string>
    <string name="already_have_an_account_log_in">Already have an Account? Log in</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="user">User</string>
    <string name="settings">Settings</string>
    <string name="feeds">feeds</string>
    <string name="topics">topics</string>
    <string name="title_activity_account">AccountActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="change_password">Change Password</string>
    <string name="business">Business</string>
    <string name="entertainment">Entertainment</string>
    <string name="general">General</string>
    <string name="health">Health</string>
    <string name="sports">Sports</string>
    <string name="technology">Technology</string>
    <string name="save_preferences">Save Preferences</string>
    <string name="science">Science</string>
    <string name="save_topics">Save Topics</string>
    <string name="choose_preferred_country">Choose preferred Country:</string>
    <string name="reset_topics">reset topics</string>
    <string name="log_out">Log out</string>
    <string name="title_activity_web_view">WebViewActivity</string>
    <string name="swipe_up_for_generating_news">Swipe up for generating news</string>
    <string name="navigate_back_to_register_screen">Navigate back to Register screen</string>
</resources>