<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FireBase.RegisterActivity"
    android:orientation="vertical">

    <EditText
        android:id="@+id/email_signUp"
        android:hint="@string/email"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </EditText>

    <EditText
        android:layout_width="match_parent"
        android:id="@+id/password_signUp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:layout_height="wrap_content">

    </EditText>

    <Button
        android:id="@+id/button_signUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up">

    </Button>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="bottom">

        <Button
            android:layout_width="match_parent"
            android:id="@+id/button_register_login"
            android:text="@string/already_have_an_account_log_in"
            android:layout_marginBottom="25dp"
            android:layout_height="wrap_content">

        </Button>

    </LinearLayout>

</LinearLayout>