<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.coursework.ui.home.HomeFragment"
        android:label="@string/title_feed"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_topics"
        android:name="com.example.coursework.ui.topics.TopicsFragment"
        android:label="@string/title_topics"
        tools:layout="@layout/fragment_topics" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.coursework.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.example.coursework.ui.account.AccountFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_account" />

</navigation>