<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FireBase.LoginActivity"
    android:orientation="vertical">


    <EditText
        android:id="@+id/email_login"
        android:layout_width="match_parent"
        android:hint="@string/email"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="15dp"
        android:layout_height="wrap_content">
    </EditText>

    <EditText
        android:id="@+id/password_login"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password">
    </EditText>

    <Button
        android:id="@+id/button_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login">

    </Button>



</LinearLayout>