<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/fragment_search"
    tools:context=".ui.search.SearchFragment">

    <EditText
        android:id="@+id/Keyword_Input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:hint="Keyword">

    </EditText>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp">

        <TextView
            android:text="@string/country"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="25dp">

        </TextView>
        <Spinner
            android:id="@+id/country_list_spinner"
            android:entries="@array/Countries"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="25dp">
        </Spinner>



    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp">

        <TextView
            android:text="@string/category"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="25dp">

        </TextView>

        <Spinner
            android:id="@+id/category_list_spinner"
            android:entries="@array/Categories"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="25dp">
        </Spinner>



    </LinearLayout>

    <Button
        android:id="@+id/search_button"
        android:layout_marginTop="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_for_articles">

    </Button>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:id="@+id/recyclerView_search_layout"
        android:layout_height="match_parent">


    </androidx.recyclerview.widget.RecyclerView>

</LinearLayout>